@@ -7,7 +7,7 @@
 TEXMFCNF=$srcdir/../kpathsea
 export TEXMFCNF
 
-rm -f foo.* uni.* pprec*.* rangetwo.* rule*.*
+rm -f foo.* uni.* pprec*.* rangetwo.* locale*.* rule*.*
 
 ./upmendex $srcdir/tests/foo.idx -o foo.ind1 -t foo.ilg1 \
 	&& diff $srcdir/tests/foo.ind foo.ind1 || exit 1
@@ -45,6 +45,11 @@ cat $srcdir/tests/uni.idx | \
 ./upmendex -s $srcdir/tests/pprec2.ist $srcdir/tests/pprecA.idx \
 	-o pprecA-2.ind1 -t pprecA-2.ilg \
 	&& diff $srcdir/tests/pprecA-2.ind pprecA-2.ind1 || exit 1
+
+# test for icu_locale
+./upmendex -s $srcdir/tests/uni.ist -s $srcdir/tests/locale1.ist $srcdir/tests/rule.idx \
+	-o locale1.ind1 -t locale1.ilg \
+	&& diff $srcdir/tests/locale1.ind locale1.ind1 || exit 1
 
 # test for icu_rules
 ./upmendex -s $srcdir/tests/uni.ist -s $srcdir/tests/rule1.ist $srcdir/tests/rule.idx \
